force-app/main/default/objects/Event_Receipt__c/Event_Receipt__c.object-meta.xml
<CustomObject>
    <label>Event Receipt</label>
    <nameField>
        <displayFormat>SINV-{00000}</displayFormat>
        <label>Event Receipt Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>