force-app/main/default/objects/Event_Receipt__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>