force-app/main/default/objects/Event_Receipt__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>Paid</label>
    <summarizedField>Event_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Event_Payment__c.Charge_Today__c</field>
        <operation>notEqual</operation>
        <value>No</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Payment__c.Event_Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>