force-app/main/default/objects/Event_Receipt__c/fields/Event_Subject__c.field-meta.xml
<CustomField>
    <fullName>Event_Subject__c</fullName>
    <label>Event Subject</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Event Receipts</relationshipLabel>
    <relationshipName>Event_Receipts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>