force-app/main/default/objects/Event_Receipt__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <formula>DATEVALUE(  LastModifiedDate )</formula>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>