force-app/main/default/objects/Event_Receipt__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <label>Mobile No</label>
    <type>Phone</type>
</CustomField>