force-app/main/default/objects/Event_Receipt__c/fields/Payment_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Code__c</fullName>
    <label>Payment Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>