force-app/main/default/objects/Event_Receipt__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONTACTLESS/PAYWAVE</fullName>
            </value>
            <value>
                <fullName>EMV CHIP-6</fullName>
            </value>
            <value>
                <fullName>EMV CHIP-12</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Paynow</fullName>
            </value>
            <value>
                <fullName>Climate voucher</fullName>
            </value>
            <value>
                <fullName>Event Receipts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>