force-app/main/default/objects/Event_Receipt__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Sales_Region__c</field>
            <operation>equals</operation>
            <valueField>Product__c.sales_region__c</valueField>
        </filterItems>
        <filterItems>
            <field>Product__c.Product_Line__c</field>
            <operation>notEqual</operation>
            <value>Accessories</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Event Receipts</relationshipLabel>
    <relationshipName>Event_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>