force-app/main/default/objects/Event_Receipt__c/fields/Promoter_Note__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Note__c</fullName>
    <label>Promoter Note</label>
    <length>25555</length>
    <type>Html</type>
</CustomField>