force-app/main/default/objects/Event_Receipt__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <summarizedField>Event_Sales__c.Sub_Total__c</summarizedField>
    <summaryForeignKey>Event_Sales__c.Event_Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>