force-app/main/default/objects/Event_Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Total__c</columns>
    <columns>Invoice_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>